<resources>
    <string name="firebase_url">https://niceneat.firebaseio.com</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="twitter_consumer_key">zYGdQ3phzN9uHpGkDGK3ITnBV</string>
    <string name="twitter_consumer_secret">akW7fxiGATOLfpQCXl9HG0KCK2lHZQWaKQWCgMpXEVYK9OyMmb</string>
    <string name="button_verifycode">Niceneat Code </string>
    <string name="button_send_message">SEND</string>
    <string name="sms_price">SMS를 1회 발송합니다. 통신사에 따라 요금이 과금될 수 있습니다. </string>
     <string name="btn_begin_signup_email">이메일을 직접 입력</string>
     <string name="btn_forgot_emailpw_signin">Forgot Password?</string>
    <string name="btn_verifyemail">인증용 이메일 발송</string>
     <string name="btn_email_signin">Sign In</string>
    <string name="chat_below_chat">CHAT</string>
    <string name="chat_below_friendlist">FRIENDS</string>
    <string name="calc_done">입력</string>
    <string name="had_great_time">좋은 시간이었어요~!</string>
    <string name="exp_done">선택된 친구들에게 메시지를 보냅니다</string>
    <string name="event_below_give">줄 예정</string>
    <string name="event_below_receive">받을 예정</string>
    <string name="group_below_all">전체</string>
    <string name="group_below_give">줄 예정</string>
    <string name="group_below_receive">받을 예정</string>
    <string name="event_below_all">전체</string>
    <string name="chat_up_oneone">1:1</string>
    <string name="chat_up_group">그룹</string>
    <string name="myprofile_below_logout">LOG OUT</string>
    <string name="myprofile_below_setservice">SETTING</string>
    <string name="dlg_wait_please">잠시 기다려 주십시오..</string>
    <string name="tab_stream">Stream</string>
    <string name="tab_messages">Messages</string>
    <string name="tab_notifications">Notifications</string>
    <string name="tab_photos">Photos</string>
    <string name="receive">Receive</string>
    <string name="give">Give</string>
    <string name="btn_receive_for_future_use_for_all">Collecting money for expense of everyone</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="dissert">Dissert</string>
    <string name="drink">Drink</string>
    <string name="shopping">Shopping</string>
    <string name="fun">Fun</string>
    <string name="life">Life</string>
    <string name="trip">Trip</string>
    <string name="money">Money</string>
    <string name="no_address">No Address</string>
    <string name="at">"@"</string>
    <string name="plus">"+"</string>
    <string name="equal"><![CDATA[=]]></string>
    <string name="multiple">"*"</string>
    <string name="back">←</string>
    <string name="total_money_i_spent">내가 지출한 총액</string>
    <string name="i_am_included">이것은 내 부담을 포함한 총액</string>
    <string name="i_am_included_not">이것은 내 부담을 포함하지 않은 총액</string>
    <string name="n_devided">사람별 부담을 같게</string>
    <string name="n_devided_not">사람별 부담을 다르게</string>
    <string name="my_burden">나의 부담</string>
    <string name="friends_burden">친구들에게 청구하는 금액</string>
    <string name="please_add_new">"+"를 눌러서 추가하세요</string>
    <string name="qb_slogan">YOUR COMMUNICATION \nBACKEND</string>
    <string name="hint_enter_your_message">Enter Your message here</string>
    <string name="send">Send notification to yourself</string>
    <string name="received_messages">Received messages</string>
    <string name="no_messages">No messages</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="name">Name</string>
    <string name="tags">Tags</string>
    <string name="name_with_colon">Name:</string>
    <string name="tags_with_colon">Tags:</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="show_user">Show User</string>
    <string name="update_user">Update User</string>
    <string name="users">Users</string>
    <string name="logout">Log Out</string>
    <string name="login">Login</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="web_site">Web Site</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="choose">Choose</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait…</string>
    <string name="user_log_out_msg">User successfully logout!</string>
    <string name="please_sign_in">Please signIn by this user!</string>
    <string name="user_successfully_updated">User was successfully updated!</string>
    <string name="user_successfully_sign_in">User was successfully sign in!</string>
    <string name="user_successfully_deleted">User was successfully deleted!</string>
    <string name="colon">:</string>
    <string name="self_edit">Self edit</string>
    <string name="save">save</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="three_dots">…</string>
    <string name="app_name">Niceneat</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="contacts">Contacts</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="last_online">Last online:</string>
    <string name="online">Online</string>
    <string name="search">Search</string>
    <string name="invite_text">Invite text</string>
    <string name="invite_title">Invite title</string>
    <string name="dlg_attached_last_message">Attachment</string>
    <string name="dlg_fail_send_msg">Errors occurred while sending msg! Please, try later</string>
    <string name="dlg_fail_connection">Sorry, connection lost. It will be reestablished when the Internet will be available.</string>
    <string name="dlg_not_joined_room">You have not joined chat room! Please wait…</string>
    <string name="dlg_fail_create_groupchat">Errors occurred while creating group chat! Please, try later</string>
    <string name="dlg_fail_create_chat">Errors occurred while creating chat! Please, try later</string>
    <string name="dlg_fail_upload_attach">Errors occurred during loading file</string>
    <string name="frl_online">Online</string>
    <string name="frl_offline">Offline</string>
    <string name="frl_friends_request_message_for_friend">User has sent a request to you </string>
    <string name="frl_friends_request_message_for_me">Your request has been sent </string>
    <string name="frl_friends_request_accept_message_for_friend">User has accepted your contact request</string>
    <string name="frl_friends_request_accept_message_for_me">You have accepted a request </string>
    <string name="frl_friends_request_reject_message_for_friend">Your request has been rejected </string>
    <string name="frl_friends_request_reject_message_for_me">You have rejected a request</string>
    <string name="frl_friends_request_remove_message_for_friend">User has deleted you from contacts </string>
    <string name="frl_friends_request_remove_message_for_me">User has been deleted from your contacts </string>
    <string name="frl_friends_contact_request">Contact request </string>
    <string name="inf_url_to_facebook_avatar">https://graph.facebook.com/%1$s/picture?type=large</string>
    <string name="user_created_room">%1$s created group chat</string>
    <string name="file_was_attached">file was attached</string>
    <string-array name="friends_relation_statuses_array">
        <item>none</item>
        <item>to</item>
        <item>both</item>
        <item>from</item>
        <item>remove</item>
    </string-array>
</resources>